--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 a,
 a:hover,
@@ -40,6 +43,8 @@ a:active {
   position: absolute;
   width: 100%;
   z-index: 2;
+  background-color: #3a98b9;
+  position: fixed;
 }
 
 .nav-items {
@@ -60,6 +65,128 @@ a:active {
 
 .nav-items .logo {
   font-size: 2.18rem;
+}
+
+.hamburger {
+  width: 30px;
+  height: 30px;
+  border: none;
+  background: transparent;
+  display: none;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: inherit;
+  border: none;
+  outline: none;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+  color: white;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  background-color: white;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Add a media query for screens smaller than 600px */
+@media only screen and (max-width: 600px) {
+  .nav-items ul {
+    display: none;
+  }
+
+  .nav-items .hamburger {
+    display: block;
+  }
+
+  .nav-items.responsive ul {
+    display: block;
+    position: absolute;
+    top: 55px;
+    right: 0;
+    background-color: #f9f9f9;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  .nav-items.responsive ul li {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .nav-items.responsive ul li a {
+    display: block;
+    padding: 20px;
+    color: #333;
+    text-decoration: none;
+  }
+
+  /* Adjust the dropdown styles for responsive navbar */
+  .nav-items .dropdown {
+    position: static;
+  }
+  .nav-items .dropdown .dropbtn {
+    font-size: inherit;
+    border: none;
+    outline: none;
+    padding: 20px;
+    color: black;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+  }
+
+  .nav-items .dropdown .dropdown-content {
+    display: none;
+  }
+
+  .nav-items .dropdown.active .dropdown-content {
+    position: static;
+    background-color: inherit;
+    box-shadow: none;
+    display: block;
+  }
+
+  .nav-items .dropdown .dropdown-content a {
+    display: block;
+    padding: 10px;
+    color: #333;
+    text-decoration: none;
+    text-align: center;
+  }
 }
 
 /* Hero Section  */
@@ -127,6 +254,10 @@ a:active {
     left: 50%; */
 }
 
+.img-content {
+  margin: 1.5rem 0;
+}
+
 /* About & Vision Section */
 
 #about,
@@ -139,6 +270,8 @@ a:active {
 
 .row {
   display: flex;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .reverse {
@@ -246,8 +379,15 @@ form button {
   border: none;
   margin: 20px;
   cursor: pointer;
-  font-family: Montserrat;
+  font-family: Montserrat-semi-bold;
   font-weight: bold;
+}
+
+.product-subheading {
+  font-family: Montserrat-semi-bold;
+  width: 70%;
+  margin: 1rem auto 3rem auto;
+  text-align: center;
 }
 
 /* Contact US */
@@ -398,5 +538,13 @@ input {
   }
   .nav-items ul {
     gap: 20px;
+  }
+  @media screen and (max-width: 400px) {
+    #hero:before {
+      bottom: 10%;
+    }
+    #products .product-card {
+      width: 80%;
+    }
   }
 }
