--- a/style.css
+++ b/style.css
@@ -121,6 +121,9 @@ a:active {
 
 /* Add a media query for screens smaller than 600px */
 @media only screen and (max-width: 600px) {
+  .navbar {
+    padding: 1rem;
+  }
   .nav-items ul {
     display: none;
   }
@@ -593,4 +596,24 @@ input {
   height: 400px;
   background-color: lightgrey;
   border-radius: 20px;
+}
+
+@media screen and (max-width: 1100px) {
+  .indusvale-images .indusvale-image {
+    width: 400px;
+    height: 350px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .indusvale-images .indusvale-image {
+    width: 350px;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .indusvale-images .indusvale-image {
+    width: 100%;
+    height: 300px;
+  }
 }
