--- a/style.css
+++ b/style.css
@@ -594,27 +594,28 @@ input {
 }
 
 .product--desc {
-  margin: 2rem;
-}
-.product--desc p {
   font-family: Montserrat;
   font-size: 1.2rem;
   text-align: justify;
+  width: 50%;
+  margin: 2rem;
+  align-self: center;
 }
 
-.indusvale-images {
+/* .indusvale-images {
   display: flex;
   width: 100%;
   justify-content: space-around;
   flex-wrap: wrap;
   gap: 2rem;
-}
+} */
 
-.indusvale-images .indusvale-image {
-  width: 500px;
+.indusvale-image {
+  width: 50%;
   height: 400px;
   background-color: lightgrey;
   border-radius: 20px;
+  margin: 2rem;
 }
 
 @media screen and (max-width: 1100px) {
@@ -623,21 +624,12 @@ input {
     height: 350px;
   }
 }
-@media screen and (max-width: 850px) {
-  .indusvale-images .indusvale-image {
-    width: 350px;
-    height: 300px;
+@media screen and (max-width: 870px) {
+  .indusvale-image,
+  .product--desc {
+    width: 80%;
   }
 }
-
-@media screen and (max-width: 750px) {
-  .indusvale-images .indusvale-image {
-    width: 100%;
-    height: 300px;
-  }
-}
-
-/* Footer */
 
 /* FOOTER */
 .footer {
