--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 @font-face {
+  font-family: Anton;
+  src: url(./fonts/Anton/Anton-Regular.ttf);
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url(./fonts/Poppins/Poppins-Regular.ttf);
+}
+
+@font-face {
   font-family: Bungee;
   src: url(./fonts/Bungee/Bungee-Regular.ttf);
 }
@@ -13,8 +23,13 @@
   src: url(./fonts/Montserrat/static/Montserrat-SemiBold.ttf);
 }
 
+@font-face {
+  font-family: Vollkorn;
+  src: url(./fonts/Vollkorn/static/Vollkorn-Regular.ttf);
+}
+
 * {
-  font-family: Bungee;
+  font-family: Anton;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -63,8 +78,14 @@ a:active {
   font-size: 1.125rem;
 }
 
+.nav-items ul li a,
+.logo a {
+  font-family: Bungee;
+}
+
 .nav-items .logo {
   font-size: 2.18rem;
+  font-family: Bungee;
 }
 .logo-img {
   width: 66px;
@@ -85,7 +106,7 @@ a:active {
   border: none;
   outline: none;
   background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
+  font-family: Bungee; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
   color: white;
   width: 100%;
@@ -228,22 +249,30 @@ a:active {
 .hero-content h1 {
   font-size: 2.8rem;
   color: #ffd3a3;
+  text-transform: uppercase;
 }
 
 .hero-content p {
   color: #eeeeee;
   font-size: 1.125rem;
   text-align: center;
+  font-family: Poppins;
+}
+
+.hero-content a {
+  width: 30%;
+  margin: 20px;
 }
 
 .hero-content button {
   background-color: #fff1dc;
-  width: 30%;
+  width: 100%;
   height: 50px;
   border-radius: 100px;
   border: none;
-  margin: 20px;
   cursor: pointer;
+  font-family: Poppins;
+  font-weight: bold;
 }
 
 .hero-content button a {
@@ -259,6 +288,7 @@ a:active {
 #hero .hero-img {
   width: 1000px;
   height: auto;
+  border-radius: 20px;
   /* position: absolute;
     top: 80%;
     transform: translate(-50%);
@@ -298,7 +328,7 @@ a:active {
   height: 100%;
   position: absolute;
   z-index: 0;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.6);
 }
 /* .row .about-img, */
 .about-img {
@@ -348,7 +378,7 @@ a:active {
 
 .row .about-content p,
 .row .vision-content p {
-  font-family: Montserrat-semi-bold !important;
+  font-family: Poppins !important;
   font-size: 1.2rem;
 }
 
@@ -388,16 +418,16 @@ a:active {
 }
 .product-desc .about-product h2 {
   font-size: 2rem;
-  font-family: Montserrat-semi-bold !important;
+  font-family: Anton !important;
   margin: 1rem 0;
 }
 .product-desc .about-product p {
   font-size: 1rem;
-  font-family: Montserrat !important;
+  font-family: Poppins !important;
 }
 
-.product-desc button a {
-  font-family: Montserrat-semi-bold !important;
+.product-desc button {
+  font-family: Poppins !important;
   font-weight: bold;
 }
 
@@ -410,12 +440,12 @@ form button {
   border: none;
   margin: 20px;
   cursor: pointer;
-  font-family: Montserrat-semi-bold;
+  font-family: Poppins;
   font-weight: bold;
 }
 
 .product-subheading {
-  font-family: Montserrat-semi-bold;
+  font-family: Poppins;
   width: 70%;
   margin: 1rem auto 3rem auto;
   text-align: center;
@@ -618,11 +648,11 @@ input {
 }
 
 .quote {
-  font-family: Montserrat;
+  font-family: Poppins;
 }
 
 .product--desc {
-  font-family: Montserrat;
+  font-family: Poppins;
   font-size: 1.2rem;
   text-align: justify;
   width: 50%;
@@ -630,17 +660,9 @@ input {
   align-self: center;
 }
 
-/* .indusvale-images {
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  gap: 2rem;
-} */
-
 .indusvale-image {
   width: 50%;
-  height: 400px;
+  /* height: 400px; */
   background-color: lightgrey;
   border-radius: 20px;
   margin: 2rem;
