--- a/navbar.css
+++ b/navbar.css
@@ -43,9 +43,11 @@ a:active {
   font-size: 1.125rem;
 }
 
-.nav-items ul li a,
 .logo a {
   font-family: Bungee;
+}
+.nav-items ul li a {
+  font-family: Poppins;
 }
 
 .nav-items .logo {
@@ -71,7 +73,7 @@ a:active {
   border: none;
   outline: none;
   background-color: inherit;
-  font-family: Bungee; /* Important for vertical align on mobile phones */
+  font-family: Poppins; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
   color: white;
   width: 100%;
@@ -158,8 +160,7 @@ a:active {
     padding: 20px;
     color: black;
     background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
+    margin: 0;
   }
 
   .nav-items .dropdown .dropdown-content {
@@ -180,5 +181,11 @@ a:active {
     color: #333;
     text-decoration: none;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 12px;
   }
 }
