--- a/style.css
+++ b/style.css
@@ -1,833 +1,3 @@
-@font-face {
-  font-family: Anton;
-  src: url(./fonts/Anton/Anton-Regular.ttf);
+:root {
+  --primaryColor: #000;
 }
-
-@font-face {
-  font-family: Poppins;
-  src: url(./fonts/Poppins/Poppins-Regular.ttf);
-}
-
-@font-face {
-  font-family: Bungee;
-  src: url(./fonts/Bungee/Bungee-Regular.ttf);
-}
-
-@font-face {
-  font-family: Montserrat;
-  src: url(./fonts/Montserrat/static/Montserrat-Medium.ttf);
-}
-
-@font-face {
-  font-family: Montserrat-semi-bold;
-  src: url(./fonts/Montserrat/static/Montserrat-SemiBold.ttf);
-}
-
-@font-face {
-  font-family: Vollkorn;
-  src: url(./fonts/Vollkorn/static/Vollkorn-Regular.ttf);
-}
-
-* {
-  font-family: Anton;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html {
-  scroll-behavior: smooth;
-}
-
-a,
-a:hover,
-a:focus,
-a:active {
-  text-decoration: none;
-  color: inherit;
-}
-
-.container {
-  max-width: 1320px;
-  height: inherit;
-  margin: 0rem auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.navbar {
-  position: absolute;
-  width: 100%;
-  z-index: 2;
-  background-color: #3a98b9;
-  position: fixed;
-}
-
-.nav-items {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #ffffff;
-}
-
-.nav-items ul {
-  display: flex;
-  list-style: none;
-  gap: 30px;
-}
-.nav-items ul li {
-  font-size: 1.125rem;
-}
-
-.nav-items ul li a,
-.logo a {
-  font-family: Bungee;
-}
-
-.nav-items .logo {
-  font-size: 2.18rem;
-  font-family: Bungee;
-}
-.logo-img {
-  width: 66px;
-  height: 50px;
-}
-
-.hamburger {
-  width: 30px;
-  height: 30px;
-  border: none;
-  background: transparent;
-  display: none;
-}
-
-/* Dropdown button */
-.dropdown .dropbtn {
-  font-size: inherit;
-  border: none;
-  outline: none;
-  background-color: inherit;
-  font-family: Bungee; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
-  color: white;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-}
-
-/* Dropdown content (hidden by default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  background-color: white;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* Add a media query for screens smaller than 600px */
-@media only screen and (max-width: 600px) {
-  .navbar {
-    padding: 1rem;
-  }
-  .nav-items ul {
-    display: none;
-  }
-
-  .nav-items .hamburger {
-    display: block;
-  }
-
-  .nav-items.responsive ul {
-    display: block;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #f9f9f9;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-  }
-
-  .nav-items.responsive ul li {
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    border-bottom: 1px solid #ddd;
-  }
-
-  .nav-items.responsive ul li a {
-    display: block;
-    padding: 20px;
-    color: #333;
-    text-decoration: none;
-  }
-
-  /* Adjust the dropdown styles for responsive navbar */
-  .nav-items .dropdown {
-    position: static;
-  }
-  .nav-items .dropdown .dropbtn {
-    font-size: inherit;
-    border: none;
-    outline: none;
-    padding: 20px;
-    color: black;
-    background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
-  }
-
-  .nav-items .dropdown .dropdown-content {
-    display: none;
-  }
-
-  .nav-items .dropdown.active .dropdown-content {
-    position: static;
-    background-color: inherit;
-    box-shadow: none;
-    display: block;
-    background-color: #ddd;
-  }
-
-  .nav-items .dropdown .dropdown-content a {
-    display: block;
-    padding: 10px;
-    color: #333;
-    text-decoration: none;
-    text-align: center;
-  }
-}
-
-/* Hero Section  */
-
-#hero {
-  width: 100%;
-  /* height: 90vh; */
-  /* background-color: #3A98B9; */
-  position: relative;
-}
-
-#hero:before {
-  content: "";
-  position: absolute;
-  z-index: -10;
-  bottom: 35%;
-  width: 100%;
-  height: 100%;
-  background-color: #3a98b9;
-}
-
-#hero .hero-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 70%;
-  margin: 0 auto;
-  padding-top: 10%;
-}
-
-.hero-content h1 {
-  font-size: 2.8rem;
-  color: #ffd3a3;
-  text-transform: uppercase;
-}
-
-.hero-content p {
-  color: #eeeeee;
-  font-size: 1.125rem;
-  text-align: center;
-  font-family: Poppins;
-}
-
-.hero-content a {
-  width: 30%;
-  margin: 20px;
-}
-
-.hero-content button {
-  background-color: #fff1dc;
-  width: 100%;
-  height: 50px;
-  border-radius: 100px;
-  border: none;
-  cursor: pointer;
-  font-family: Poppins;
-  font-weight: bold;
-}
-
-.hero-content button a {
-  font-family: Montserrat;
-  font-weight: bold;
-  font-size: 1rem;
-}
-
-#hero .hero-img-parent {
-  display: flex;
-  justify-content: center;
-}
-#hero .hero-img {
-  width: 1000px;
-  height: auto;
-  border-radius: 20px;
-  /* position: absolute;
-    top: 80%;
-    transform: translate(-50%);
-    left: 50%; */
-}
-
-.img-content {
-  margin: 1.5rem 0;
-}
-
-/* About & Vision Section */
-
-#about,
-#vision,
-#contact,
-#products {
-  margin-top: 2rem;
-  padding: 3rem 0;
-}
-
-.row {
-  display: flex;
-  /* justify-content: center;
-  align-items: center; */
-}
-
-.reverse {
-  flex-direction: row-reverse;
-}
-
-.bg-grey {
-  background-color: #eeeeee;
-}
-
-.overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 0;
-  background-color: rgba(255, 255, 255, 0.6);
-}
-/* .row .about-img, */
-.about-img {
-  position: relative;
-  height: 400px;
-  width: 100%;
-}
-.about-content {
-  position: absolute;
-  text-align: center;
-  width: 90%;
-}
-.row .vision-img {
-  width: 60%;
-  padding: 1rem;
-  height: 400px;
-}
-
-.row .about-img img,
-.row .vision-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-  border-radius: 10px;
-}
-/* .row .about-content, */
-.row .vision-content {
-  width: 40%;
-  padding: 1rem;
-}
-
-/* .row .about-content {
-  text-align: end;
-} */
-.row .about-content {
-  text-align: center;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.row .about-content h1,
-.row .vision-content h1 {
-  font-size: 2.8rem;
-  color: #3a98b9;
-}
-
-.row .about-content p,
-.row .vision-content p {
-  font-family: Poppins !important;
-  font-size: 1.2rem;
-}
-
-/* Products */
-
-#products h1 {
-  font-size: 2.8rem;
-  color: #3a98b9;
-  text-align: center;
-}
-
-#products .product-card {
-  display: flex;
-  flex-direction: column;
-  background-color: #eeeeee;
-  width: 45%;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  border-radius: 20px;
-}
-
-#products .product-card img {
-  width: 100%;
-  height: auto;
-}
-
-.product-desc {
-  display: flex;
-  padding: 1rem;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-.product-desc .about-product {
-  width: 100%;
-}
-.product-desc .about-product h2 {
-  font-size: 2rem;
-  font-family: Anton !important;
-  margin: 1rem 0;
-}
-.product-desc .about-product p {
-  font-size: 1rem;
-  font-family: Poppins !important;
-}
-
-.product-desc button {
-  font-family: Poppins !important;
-  font-weight: bold;
-}
-
-.product-desc button,
-form button {
-  background-color: #ffd3a3;
-  width: 100%;
-  height: 50px;
-  border-radius: 10px;
-  border: none;
-  margin: 20px;
-  cursor: pointer;
-  font-family: Poppins;
-  font-weight: bold;
-}
-
-.product-subheading {
-  font-family: Poppins;
-  width: 70%;
-  margin: 1rem auto 3rem auto;
-  text-align: center;
-  font-size: 1.2rem;
-}
-
-/* Contact US */
-
-#contact {
-  background-color: #eeeeee;
-}
-
-#contact h1 {
-  font-size: 2.8rem;
-  color: #3a98b9;
-  text-align: center;
-}
-
-#contact .contact-us-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  margin: 0 auto;
-}
-form input,
-form textarea {
-  font-family: Montserrat-semi-bold;
-}
-textarea {
-  resize: none;
-  border-radius: 7px;
-  border: transparent;
-  padding: 1rem;
-}
-
-textarea:focus,
-input:focus {
-  outline: none;
-}
-
-.form-group {
-  display: flex;
-  gap: 20px;
-  width: 100%;
-}
-.field-group {
-  width: 100%;
-}
-
-.field-group * {
-  display: block;
-}
-.field-group input,
-.field-group textarea {
-  width: 100%;
-}
-
-input {
-  border-radius: 6px;
-  height: 2rem;
-  padding: 1rem;
-  border: transparent;
-}
-
-/* Responsive */
-
-@media screen and (max-width: 1100px) {
-  #hero .hero-img {
-    width: 800px;
-  }
-}
-@media screen and (max-width: 1000px) {
-  html {
-    font-size: 14px;
-  }
-}
-@media screen and (max-width: 870px) {
-  #hero .hero-content {
-    padding-top: 14%;
-  }
-  #about .about-img,
-  #about .about-content,
-  #vision .vision-img,
-  #vision .vision-content {
-    text-align: center;
-    width: 80%;
-  }
-
-  .row .vision-img,
-  .row .about-img {
-    height: auto;
-  }
-  .row {
-    flex-direction: column-reverse;
-    align-items: center;
-  }
-  #hero .hero-img {
-    width: 700px;
-  }
-
-  #hero:before {
-    bottom: 25%;
-  }
-  #contact .contact-us-form {
-    width: 70%;
-  }
-  #about,
-  #vision,
-  #contact,
-  #products {
-    margin-top: 0;
-  }
-}
-
-@media screen and (max-width: 780px) {
-  html {
-    font-size: 12px;
-  }
-  #hero .hero-img {
-    width: 90%;
-  }
-  #products .product-card {
-    width: 60%;
-  }
-}
-
-@media screen and (max-width: 670px) {
-  html {
-    font-size: 10px;
-  }
-  .hero-content button {
-    width: 60%;
-  }
-  #contact .contact-us-form {
-    width: 90%;
-  }
-}
-
-@media screen and (max-width: 580px) {
-  #hero h1 {
-    font-size: 2.5rem;
-  }
-}
-@media screen and (max-width: 500px) {
-  #hero h1 {
-    text-align: center;
-  }
-  #hero .hero-content {
-    padding-top: 20%;
-  }
-  .nav-items ul {
-    gap: 20px;
-  }
-  @media screen and (max-width: 400px) {
-    #hero:before {
-      bottom: 10%;
-    }
-    #products .product-card {
-      width: 80%;
-    }
-  }
-}
-
-.main-img {
-  text-align: center;
-  padding-top: 8rem;
-}
-.main-img img {
-  width: 100%;
-  max-width: 800px;
-  height: 100%;
-}
-
-.quote-parent {
-  background-color: #fff1dc;
-  margin-bottom: 2rem;
-}
-
-.quote-container {
-  text-align: center;
-  padding: 2rem;
-  font-size: 1.2rem;
-  border-radius: 22px;
-  width: 60%;
-  margin: auto;
-}
-
-.apostrophe {
-  font-size: 5rem;
-  line-height: 1;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: 1rem;
-  color: rgba(0, 0, 0, 0.75);
-}
-
-.quote {
-  font-family: Poppins;
-}
-
-.product--desc {
-  font-family: Poppins;
-  font-size: 1.2rem;
-  text-align: justify;
-  width: 50%;
-  margin: 2rem;
-  align-self: center;
-}
-
-.indusvale-image {
-  width: 50%;
-  /* height: 400px; */
-  background-color: lightgrey;
-  border-radius: 20px;
-  margin: 2rem;
-}
-
-@media screen and (max-width: 1100px) {
-  .indusvale-images .indusvale-image {
-    width: 400px;
-    height: 350px;
-  }
-}
-@media screen and (max-width: 870px) {
-  .indusvale-image,
-  .product--desc {
-    width: 80%;
-  }
-}
-
-/* FOOTER */
-.footer {
-  width: 100%;
-  background: #00121b;
-  display: block;
-}
-
-.inner-footer {
-  width: 95%;
-  margin: auto;
-  padding: 30px 10px;
-  display: flex;
-  flex-wrap: wrap;
-  box-sizing: border-box;
-  justify-content: center;
-}
-
-.footer-items {
-  width: 25%;
-  padding: 10px 20px;
-  box-sizing: border-box;
-  color: #fff;
-}
-
-.footer-items p {
-  font-size: 16px;
-  text-align: justify;
-  line-height: 25px;
-  color: #ffd3a3;
-}
-
-.footer-items h1 {
-  color: #fff;
-}
-
-.border1 {
-  height: 3px;
-  width: 40px;
-  background: #ffd3a3;
-  color: #ffd3a3;
-  background-color: #ffd3a3;
-  border: 0px;
-}
-
-.footer-items ul {
-  list-style: none;
-  color: #fff;
-  font-size: 14px;
-  letter-spacing: 0.5px;
-}
-
-.footer-items ul a {
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  transition: 0.3s;
-}
-
-.footer-items ul a:hover {
-  color: #ffd3a3;
-}
-
-.footer-items ul li {
-  margin: 10px 0;
-  height: 25px;
-}
-
-.footer-items li i {
-  margin-right: 20px;
-}
-
-.social-media {
-  display: flex;
-  margin: 2rem 0;
-  gap: 1rem;
-}
-
-.social-media-icon i {
-  font-size: 2rem;
-  transition: transform 0.5s ease;
-}
-
-.social-media i:hover {
-  transform: scale(1.2);
-}
-
-/* .social-media-icon i.fa-google {
-  background: conic-gradient(
-      from -45deg,
-      #ea4335 110deg,
-      #4285f4 90deg 180deg,
-      #34a853 180deg 270deg,
-      #fbbc05 270deg
-    )
-    73% 55%/150% 150% no-repeat;
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  -webkit-text-fill-color: transparent;
-}
-
-.social-media-icon i.fa-instagram {
-  color: transparent;
-  background: radial-gradient(
-    circle at 30% 107%,
-    #fdf497 0%,
-    #fdf497 5%,
-    #fd5949 45%,
-    #d6249f 60%,
-    #285aeb 90%
-  );
-  background: -webkit-radial-gradient(
-    circle at 30% 107%,
-    #fdf497 0%,
-    #fdf497 5%,
-    #fd5949 45%,
-    #d6249f 60%,
-    #285aeb 90%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-} */
-
-.footer-bottom {
-  padding: 10px;
-  background: #00121b;
-  color: #fff;
-  font-size: 12px;
-  text-align: center;
-}
-
-/* for tablet mode view */
-
-@media screen and (max-width: 1275px) {
-  .footer-items {
-    width: 50%;
-  }
-}
-
-/* for mobile screen view */
-
-@media screen and (max-width: 660px) {
-  .footer-items {
-    width: 100%;
-  }
-}
-
-/* you can toggle the media screen view accordingly by changing the (max-width: px) to your convenience */
-
-/* Thanks to Computer Conversations */
