--- a/navbar.css
+++ b/navbar.css
@@ -21,7 +21,8 @@ a:active {
 .navbar {
   width: 100%;
   z-index: 2;
-  background-color: #3a98b9;
+  /* background-color: #3a98b9; */
+  background-color: var(--primaryColor);
   position: fixed;
 }
 
