--- a/footer.css
+++ b/footer.css
@@ -9,6 +9,11 @@
 
 .footer h1 {
   font-family: Bungee;
+  font-size: 1.5rem;
+}
+
+.footer h3 {
+  font-size: 1.5rem;
 }
 
 .footer ul {
@@ -21,6 +26,7 @@
   gap: 10px;
   display: flex;
   align-items: center;
+  font-size: 0.8rem;
 }
 
 .inner-footer {
@@ -107,7 +113,7 @@
   /* background-color: #3a98b9; */
   border-top: 1px solid white;
   color: #fff;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-family: Poppins;
 }
 
