--- a/careers/career.css
+++ b/careers/career.css
@@ -6,8 +6,13 @@ body {
   
   header h1 {
     text-align: center;
-    color: #d38fc3;
+    color: #000;
     margin-top: 20px;
+  }
+
+  a{
+    color: black;
+    text-decoration: none;
   }
   
   .filter-section {
@@ -32,7 +37,8 @@ body {
   }
   
   .accordion {
-    max-width: 800px;
+    max-width: 1000px;
+    width: 100%;
     margin: 0 auto;
     border-top: 2px solid #333;
   }
@@ -46,6 +52,7 @@ body {
     margin: 0;
     cursor: pointer;
     background-color: #f8f8f8;
+    font-size: 1.5rem;
   }
   
   .accordion-content {
@@ -64,9 +71,9 @@ body {
   /* Accordion smooth animation */
 .accordion {
     transition: opacity 0.4s ease-in-out, max-height 0.4s ease-in-out;
-    overflow: hidden;
+    /* overflow: hidden; */
     opacity: 1;
-    max-height: 1000px; /* High enough to fit content */
+    /* max-height: 1000px;  */
   }
   
   .accordion.hidden {
